# gea-package

./: .gitignore  .gitmodules  AUTHORS  LICENSE  MANIFEST.in  PKG-INFO  README.md  README.rst  pyproject.toml  setup.py
gea/: .gitignore  LICENSE  README.md  admin.py  apps.py  backup-db.sh  forms.py  gea_vars.py  models.py  requirements.txt  urls.py  views.py  zentyal-howto.md
gea/backup/: backup-db.sh  backup-files.sh
gea/backup/db/: basics-db.sh  data.sql  triggers.sql
gea/migrations/: 0001_initial.py  0002_auto_20170131_1240.py  0002_auto_20200505_1940.py  0003_auto_20200506_1813.py  0003_expediente_planoff.py  0004_auto_20170203_1731.py  0004_auto_20200513_1915.py  0005_auto_20170203_1943.py  0005_auto_20200520_1724.py  0006_auto_20170206_1730.py  0006_auto_20210324_1219.py  0007_auto_20191203_1819.py  0007_auto_20210324_1222.py  0008_auto_20210324_1808.py
gea/templates/: _pagination.html  about.html  base.html  catastro_form.html  dvapi.html  dvapi_form.html  index.html  listado_comun.html  localidades_cp.ods  localidades_para_visacion.ods  menu.html  nota.html  plano_form.html  portada.html  presup.html  presup_form.html  set_form.html  solic.html  solic_form.html  solic_list.html  visac.html  visac_form.html
gea/templates/doc/: visac.html
gea/templates/gea/: catastros_locales.html  expediente_detail.html  expediente_list.html  persona_confirm_delete.html  persona_detail.html  persona_form.html  persona_list.html
gea/templates/home/: index.html
gea/templates/includes/: _pagination.html  topbar.html
gea/templatetags/: tags.py
(+22 files in other folders)
